Fix: Navbar mobi menu z-index as "1"

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -65,6 +65,7 @@
       left: 0;
       background-color: #ffffff;
       box-shadow: 0px 2px 6px #00000026;
+      z-index: 1;
 
       & > nav > ul {
         width: 100%;
